[package]
name = "os"
version = "0.1.0"
authors = ["Jasper <jbg@rf.net.nz>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "*"
bitflags = ">=1.0.1"
linked_list_allocator = "*"
multiboot2 = "*"
rlibc = "*"
spin = "*"
volatile = "*"
x86_64 = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]
